--- a/tsconfig.json
+++ b/tsconfig.json
@@ -90,7 +90,10 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
-    "outDir": "dist",
-    "rootDir": "./src"
-  }
+    "outDir": "./dist",
+    "rootDir": "./"
+  },
+  "includes": [
+    "src"
+  ]
 }
