--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsproject",
+  "name": "digiventures-utils-helpers",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
