--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@digiventures/utils-helper",
+  "name": "@digiventures.stack/utils-helper",
   "version": "1.0.0",
   "publishConfig": {
     "access": "public"
