--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
-    "target": "es2018"
+    "declaration": true,
+    "target": "es2018",
+    "outDir": "./lib"
   },
   "include": [
     "src/**/*"
-  ]
+  ],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
