--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
+    "@types/aws-lambda": "^8.10.101",
     "@types/node": "^17.0.34",
     "aws-sdk": "^2.1138.0",
     "log4js": "^6.4.7",
