--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "publishConfig": {
     "access": "public"
   },
@@ -8,13 +8,17 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "pika-pack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \\\"Error: no tests specified\\\" && exit 1"
   },
   "repository": "https://github.com/DigiventuresFintech/digiventures-utils-helpers",
   "author": "Digiventures",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.6.4"
+    "@types/jest": "^28.1.6",
+    "jest": "^27.5.0",
+    "ts-jest": "^28.0.4",
+    "typescript": "^4.6.4",
+    "ts-node": "^10.4.0"
   },
   "dependencies": {
     "@pika/plugin-build-node": "^0.9.2",
