--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.9",
     "jest": "^27.5.0",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.6.4",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "@pika/plugin-build-node": "^0.9.2",
@@ -26,7 +27,9 @@
     "@types/aws-lambda": "^8.10.101",
     "@types/node": "^17.0.34",
     "aws-sdk": "^2.1138.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.4.7",
+    "moment": "^2.29.4",
     "mongodb": "^4.6.0",
     "prettier": "^2.6.2"
   },
