--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "publishConfig": {
     "access": "public"
   },
@@ -8,15 +8,19 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "pika-pack build",
-    "test": "echo \\\"Error: no tests specified\\\" && exit 1"
+    "format": "prettier --write \"**/*.ts\"",
+    "test": "npm run unit",
+    "unit": "jest"
   },
   "repository": "https://github.com/DigiventuresFintech/digiventures-utils-helpers",
-  "author": "Digiventures",
+  "author": "Juan M. Beccaceci <Digiventures Tech>",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.9",
+    "dotenv": "^16.0.2",
     "jest": "^27.5.0",
+    "prettier": "^2.5.1",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.6.4"
@@ -27,6 +31,7 @@
     "@types/aws-lambda": "^8.10.101",
     "@types/node": "^17.0.34",
     "aws-sdk": "^2.1138.0",
+    "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.4.7",
     "moment": "^2.29.4",
