--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "log4js": "^6.4.7",
     "moment": "^2.29.4",
     "mongodb": "^4.6.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "libphonenumber-js": "^1.9.17"
   },
   "@pika/pack": {
     "pipeline": [
