--- a/package.json
+++ b/package.json
@@ -15,29 +15,28 @@
   "repository": "https://github.com/DigiventuresFintech/digiventures-utils-helpers",
   "author": "Juan M. Beccaceci <Digiventures Tech>",
   "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "@types/jsonwebtoken": "^8.5.9",
-    "dotenv": "^16.0.2",
-    "jest": "^27.5.0",
-    "prettier": "^2.5.1",
-    "ts-jest": "^28.0.4",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.6.4"
-  },
   "dependencies": {
-    "@pika/plugin-build-node": "^0.9.2",
-    "@pika/plugin-ts-standard-pkg": "^0.9.2",
-    "@types/aws-lambda": "^8.10.101",
-    "@types/node": "^17.0.34",
-    "aws-sdk": "^2.1138.0",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.4.7",
     "moment": "^2.29.4",
     "mongodb": "^4.6.0",
-    "prettier": "^2.6.2",
     "libphonenumber-js": "^1.9.17"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.9",
+    "dotenv": "^16.0.2",
+    "jest": "^27.5.0",
+    "ts-jest": "^28.0.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.6.4",
+    "prettier": "^2.6.2",
+    "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-ts-standard-pkg": "^0.9.2",
+    "@types/aws-lambda": "^8.10.101",
+    "@types/node": "^17.0.34",
+    "aws-sdk": "^2.1138.0"
   },
   "@pika/pack": {
     "pipeline": [
