--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "strict": true,
     "declaration": true,
     "target": "es2018",
-    "outDir": "./lib"
+    "outDir": "./lib",
   },
   "include": [
     "src/**/*"
