--- a/.github/workflows/workflow_main_release.yml
+++ b/.github/workflows/workflow_main_release.yml
@@ -15,6 +15,9 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       # Upgrade version
       - name: Bump release version
         run: |
