--- a/.github/workflows/workflow_main_release.yml
+++ b/.github/workflows/workflow_main_release.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Configure Git
+      - name: Git configuration
+        run: |
+          git config --global user.email "github.actions@digiventures.la"
+          git config --global user.name "GitHub Actions"
+
       # Upgrade version
       - name: Bump release version
         run: |
