--- a/.github/workflows/workflow_main_release.yml
+++ b/.github/workflows/workflow_main_release.yml
@@ -44,7 +44,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git push origin && git push --tags
+          git push origin HEAD:main --force && git push --tags
 
       # Draft new release
       - uses: release-drafter/release-drafter@v5
