--- a/.github/workflows/workflow_main_release.yml
+++ b/.github/workflows/workflow_main_release.yml
@@ -1,10 +1,8 @@
 name: Release Drafter
 on:
   push:
-    branches: [
-      "main",
-      "master"
-    ]
+    tags:
+      - '*'
   pull_request:
     types: [opened, reopened, synchronize]
 
@@ -47,6 +45,8 @@ jobs:
           git push origin HEAD:main --force && git push --tags
 
       # Draft new release
-      - uses: release-drafter/release-drafter@v5
+      - name: Draft release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
