--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lodash": "^4.17.21",
     "log4js": "^6.4.7",
     "moment": "^2.29.4",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "query-string": "^8.1.0"
   },
   "devDependencies": {
     "@pika/plugin-build-node": "^0.9.2",
