--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.9.17",
     "lodash": "^4.17.21",
-    "log4js": "^6.4.7",
     "moment": "^2.29.4",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3",
+    "nanoid": "^3.0.0"
   },
   "devDependencies": {
     "@pika/plugin-build-node": "^0.9.2",
@@ -35,6 +36,7 @@
     "aws-sdk": "^2.1138.0",
     "dotenv": "^16.0.2",
     "jest": "^27.5.0",
+    "mongoose-tsgen": "^9.0.5",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.4.0",
