--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "moment": "^2.29.4",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
-    "nanoid": "^3.0.0"
+    "nanoid": "^3.0.0",
+    "ssh2-sftp-client": "^9.1.0"
   },
   "devDependencies": {
     "@pika/plugin-build-node": "^0.9.2",
@@ -34,6 +35,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.9",
+    "@types/ssh2-sftp-client": "^9.0.0",
     "aws-sdk": "^2.1138.0",
     "dotenv": "^16.0.2",
     "jest": "^27.5.0",
