--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.7.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.9",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.9.17",
     "lodash": "^4.17.21",
