--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.7.0",
     "axios": "^0.27.2",
+    "basic-ftp": "^5.0.3",
     "dayjs": "^1.11.9",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.9.17",
@@ -25,8 +26,7 @@
     "moment": "^2.29.4",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
-    "nanoid": "^3.0.0",
-    "ssh2-sftp-client": "^9.1.0"
+    "nanoid": "^3.0.0"
   },
   "devDependencies": {
     "@pika/plugin-build-node": "^0.9.2",
