--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "publishConfig": {
     "access": "public"
   },
@@ -18,6 +18,8 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.7.0",
     "axios": "^0.27.2",
+    "basic-ftp": "^5.0.3",
+    "dayjs": "^1.11.9",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.9.17",
     "lodash": "^4.17.21",
@@ -34,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.9",
+    "@types/ssh2-sftp-client": "^9.0.0",
     "aws-sdk": "^2.1138.0",
     "dotenv": "^16.0.2",
     "jest": "^27.5.0",
