--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Juan M. Beccaceci <Digiventures Tech>",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.445.0",
     "@elastic/elasticsearch": "^8.7.0",
     "axios": "^0.27.2",
     "basic-ftp": "^5.0.3",
