--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.16",
+  "version": "1.1.17",
   "publishConfig": {
     "access": "public"
   },
@@ -16,6 +16,7 @@
   "author": "Juan M. Beccaceci <Digiventures Tech>",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.445.0",
     "@elastic/elasticsearch": "^8.7.0",
     "axios": "^0.27.2",
     "basic-ftp": "^5.0.3",
@@ -29,6 +30,7 @@
     "nanoid": "^3.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/aws-lambda": "^8.10.101",
