--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.17",
+  "version": "1.1.18",
   "publishConfig": {
     "access": "public"
   },
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.445.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
     "@elastic/elasticsearch": "^8.7.0",
     "axios": "^0.27.2",
     "basic-ftp": "^5.0.3",
