--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": true,
     "target": "es6",
     "outDir": "./lib",
+    "sourceMap": true,
   },
   "include": [
     "src/**/*"
