--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.3",
+    "mongoose": "^7.1.0",
+    "mongoose-lean-getters": "^1.1.0",
     "nanoid": "^3.0.0"
   },
   "devDependencies": {
