--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.23",
+  "version": "1.1.26",
   "publishConfig": {
     "access": "public"
   },
@@ -27,7 +27,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.3",
+    "mongoose": "^7.1.0",
+    "mongoose-lean-getters": "^1.1.0",
     "nanoid": "^3.0.0"
   },
   "devDependencies": {
@@ -35,17 +36,17 @@
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/aws-lambda": "^8.10.101",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^28.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.9",
     "@types/ssh2-sftp-client": "^9.0.0",
     "aws-sdk": "^2.1138.0",
     "dotenv": "^16.0.2",
-    "jest": "^27.5.0",
+    "jest": "^28.0.0",
     "mongoose-tsgen": "^9.0.5",
     "prettier": "^2.6.2",
-    "ts-jest": "^28.0.4",
+    "ts-jest": "^28.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.9.4"
   },
