--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "mongodb": "^4.6.0",
     "mongoose": "^7.1.0",
     "mongoose-lean-getters": "^1.1.0",
-    "nanoid": "^3.0.0"
+    "nanoid": "^3.0.0",
+    "express": "4.18.2"
   },
   "devDependencies": {
+    "@types/express": "4.17.17",
     "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
