--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.29",
+  "version": "1.1.30",
   "publishConfig": {
     "access": "public"
   },
@@ -18,7 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.445.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
-    "@elastic/elasticsearch": "^8.7.0",
+    "@elastic/elasticsearch": "7.9.0",
     "axios": "^0.27.2",
     "basic-ftp": "^5.0.3",
     "dayjs": "^1.11.9",
