--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.27.2",
     "basic-ftp": "^5.0.3",
     "dayjs": "^1.11.9",
+    "dockerode": "^4.0.2",
+    "express": "4.18.2",
     "jsonwebtoken": "^8.5.1",
     "libphonenumber-js": "^1.9.17",
     "lodash": "^4.17.21",
@@ -29,15 +31,15 @@
     "mongodb": "^4.6.0",
     "mongoose": "^7.1.0",
     "mongoose-lean-getters": "^1.1.0",
-    "nanoid": "^3.0.0",
-    "express": "4.18.2"
+    "nanoid": "^3.0.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.17",
     "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/aws-lambda": "^8.10.101",
+    "@types/dockerode": "^3.3.28",
+    "@types/express": "4.17.17",
     "@types/jest": "^28.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
