--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.38",
+  "version": "1.1.39",
   "publishConfig": {
     "access": "public"
   },
@@ -19,6 +19,7 @@
     "@aws-sdk/client-cloudwatch": "^3.445.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
     "@elastic/elasticsearch": "7.9.0",
+    "@google-cloud/bigquery": "^7.7.1",
     "axios": "^0.27.2",
     "basic-ftp": "^5.0.3",
     "dayjs": "^1.11.9",
