--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "1.1.41",
+  "version": "2.0.0",
   "publishConfig": {
     "access": "public"
   },
@@ -18,6 +18,10 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.445.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
+    "@aws-sdk/client-s3": "^3.614.0",
+    "@aws-sdk/client-secrets-manager": "^3.614.0",
+    "@aws-sdk/client-sqs": "^3.614.0",
+    "@aws-sdk/client-sts": "^3.614.0",
     "@elastic/elasticsearch": "7.9.0",
     "@google-cloud/bigquery": "^7.7.1",
     "axios": "^0.27.2",
@@ -37,7 +41,6 @@
     "tar-stream": "^3.1.7"
   },
   "devDependencies": {
-    "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/aws-lambda": "^8.10.101",
@@ -49,7 +52,6 @@
     "@types/node": "^18.11.9",
     "@types/ssh2-sftp-client": "^9.0.0",
     "@types/tar-stream": "^3.1.3",
-    "aws-sdk": "^2.1138.0",
     "dotenv": "^16.0.2",
     "jest": "^28.0.0",
     "mongoose-tsgen": "^9.0.5",
