--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digiventures.stack/utils-helper",
-  "version": "2.0.17",
+  "version": "2.0.18",
   "publishConfig": {
     "access": "public"
   },
@@ -16,31 +16,30 @@
   "author": "Juan M. Beccaceci <Digiventures Tech>",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-cloudwatch": "^3.445.0",
-    "@aws-sdk/client-cloudwatch-logs": "^3.425.0",
-    "@aws-sdk/client-ec2": "^3.641.0",
-    "@aws-sdk/client-s3": "^3.614.0",
-    "@aws-sdk/client-secrets-manager": "^3.620.1",
-    "@aws-sdk/client-sqs": "^3.614.0",
-    "@aws-sdk/client-ssm": "^3.637.0",
-    "@aws-sdk/client-sts": "^3.614.0",
+    "@aws-sdk/client-cloudwatch": "3.445.0",
+    "@aws-sdk/client-cloudwatch-logs": "3.425.0",
+    "@aws-sdk/client-ec2": "3.641.0",
+    "@aws-sdk/client-s3": "3.614.0",
+    "@aws-sdk/client-secrets-manager": "3.620.1",
+    "@aws-sdk/client-sqs": "3.614.0",
+    "@aws-sdk/client-ssm": "3.637.0",
+    "@aws-sdk/client-sts": "3.614.0",
     "@elastic/elasticsearch": "7.9.0",
-    "@google-cloud/bigquery": "^7.7.1",
-    "axios": "^0.27.2",
-    "basic-ftp": "^5.0.3",
-    "dayjs": "^1.11.9",
-    "dockerode": "^4.0.2",
+    "@google-cloud/bigquery": "7.7.1",
+    "axios": "0.27.2",
+    "basic-ftp": "5.0.3",
+    "dayjs": "1.11.9",
+    "dockerode": "4.0.2",
     "express": "4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "libphonenumber-js": "^1.9.17",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "mongodb": "^4.6.0",
-    "mongoose": "^7.1.0",
-    "mongoose-lean-getters": "^1.1.0",
-    "nanoid": "^3.0.0",
-    "tar-fs": "^3.0.5",
-    "tar-stream": "^3.1.7"
+    "jsonwebtoken": "8.5.1",
+    "libphonenumber-js": "1.9.17",
+    "lodash": "4.17.21",
+    "moment": "2.29.4",
+    "mongoose": "7.1.0",
+    "mongoose-lean-getters": "1.1.0",
+    "nanoid": "3.0.0",
+    "tar-fs": "3.0.5",
+    "tar-stream": "3.1.7"
   },
   "devDependencies": {
     "@pika/plugin-build-node": "^0.9.2",
